<resources>
    <string name="app_name">BusinnessCard</string>
    <string name="label_business_card">Cartão de Visita</string>
    <string name="label_newcard">Novo Cartão</string>
    <string name="label_new_name">Nome</string>
    <string name="label_new_phone">Telefone</string>
    <string name="label_new_email">E-mail</string>
    <string name="label_new_company">Empresa</string>
    <string name="label_new_color">Cor</string>
    <string name="label_add_card">Adicionar</string>
    <string name="label_show_success">Cartão cadastrado!</string>
    <string name="label_share_card">Compartilhar</string>
</resources>